--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </div>
 
 
-Apaixonda por tecnologia, atualmente trabalho na área de suporte, mas sempre gostei da área de programação, por isso desejo muito migrar para essa área, para isso preciso dessa grande oportunidade, estou animadissima para começar.
+Apaixonada por tecnologia, atualmente trabalho na área de suporte, mas sempre gostei da área de programação, por isso desejo muito migrar para essa área, para isso preciso dessa grande oportunidade, estou animadíssima para começar.
 <br><br>
 
 O perrengue já passei no meu primeiro emprego como não tenha experiência a empresa que trabalhava estava abrindo novas filiais, com isso teríamos que implantar o sistema e treinar os usuário para utilizar, isso seria em outro estado em que moro não conhecia o lugar e não tiver praticamente nenhum treinamento, com isso tive qeu me virar para aprender rapidamente o sistema e após isso implantar o sistema e treinar os usuários. O que me ajudou muito foi a equipe que já trabalhava algum tempo, e conhecia muito, estava sempre unidos e disposto ajudar com muita paciência.
