--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
 </div>
 
 
-Apaixonada por tecnologia, atualmente trabalho na área de suporte, mas sempre gostei da área de programação, por isso desejo muito migrar para essa área, para isso preciso dessa grande oportunidade, estou animadíssima para começar.
+Apaixonda por tecnologia, atualmente trabalho na área de suporte, mas sempre gostei da área de programação, por isso desejo muito migrar para essa área, para isso preciso dessa grande oportunidade, estou animadíssima para começar.
 <br><br>
 
-A  situação complicada que já passei, foi no meu primeiro emprego como não tinha muita experiência a empresa que comecei a trabalhava estava abrindo novas filiais, com isso teríamos que implantar o sistema e treinar os usuário para utilizar, isso seria em outro estado em que moro não conhecia o lugar e não tiver praticamente nenhum treinamento, com isso tive qeu me virar para aprender rapidamente o sistema e após isso implantar o sistema e treinar os usuários. O que me ajudou muito foi a equipe que já trabalhava algum tempo, e conhecia muito, estava sempre unidos e disposto ajudar com muita paciência.
+A  situação complicada que já passei, foi no meu primeiro emprego como não tinha experiência a empresa que comecei a trabalhar estava abrindo novas filiais, com isso teríamos que implantar o sistema e treinar os usuário para utilizar, isso seria em outro estado, não conhecia o lugar e não tiver praticamente nenhum treinamento, com isso tive que me virar para aprender rapidamente o sistema e após isso implantar e treinar os usuários. O que me ajudou muito foi a equipe que já trabalhava algum tempo, e conhecia muito, estava sempre unidos e disposto ajudar com muita paciência.
 
 <br><br>
 
